# mohizar-bot

./: .env.example  .gitignore  .secrets.baseline  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_add_chat_settings.py  0002_add_memory.py
docs/: deploy.md  security_audit.md
mohizarbot/: app.py  config.py
mohizarbot/admin/: app.py  auth.py  deps.py  routes.py  schemas.py
mohizarbot/audit/: log.py
mohizarbot/bot/: api_wrapper.py  channel.py  keyboard.py  mention.py  scheduler.py  webhook.py
mohizarbot/db/: models.py  session.py
mohizarbot/llm/: __init__.py  base.py  router.py  streaming.py  types.py
mohizarbot/memory/: __init__.py  search.py  store.py
mohizarbot/multimodal/: __init__.py  base.py  document.py  image.py  registry.py  voice.py
mohizarbot/observability/: metrics.py  tracing.py
mohizarbot/policy/: confirmations.py  engine.py  intents.py  permissions.py  rate_limits.py  risk.py
mohizarbot/prompts/: system.md.tmpl
mohizarbot/security/: anchor.py  delimiters.py  guard_model.py  injection_detector.py  input_sanitizer.py  output_filter.py  spotlighting.py  untrusted.py
mohizarbot/tools/: base.py  chat_admin.py  forum.py  media.py  memory.py  messaging.py  moderation.py  polls.py  reactions.py  registry.py  web.py
scripts/: coverage_report.txt  hardening_ci.py  load_test.py  mutmut_results.txt  redteam_ci.py
tests/: conftest.py  test_config.py
tests/admin/: test_audit.py  test_auth.py  test_chats.py  test_deps_coverage.py  test_deps_coverage2.py  test_guard.py  test_routes_coverage.py  test_routes_unauth.py  test_security_headers.py  test_session.py
tests/audit/: test_chain.py
tests/bot/: test_admin_handler.py  test_api_wrapper_coverage.py  test_callbacks_extended.py  test_channel.py  test_group_handler.py  test_group_handler_coverage.py  test_group_routing.py  test_handlers_private.py  test_handlers_private_v2.py  test_keyboard.py  test_media_group.py  test_mention.py  test_private_multimodal.py  test_scheduler.py  test_webhook.py
tests/chaos/: test_db_failure.py  test_llm_timeout.py  test_redis_failure.py
tests/db/: test_chat_settings.py  test_session_lifecycle.py
tests/fuzz/: test_fuzz_delimiters.py  test_fuzz_injection_detector.py  test_fuzz_output_filter.py  test_fuzz_sanitizer.py
tests/integration/: test_redteam_multi_turn.py
tests/llm/: test_anthropic.py  test_deepseek.py  test_openai.py  test_router_failover.py  test_router_selection.py  test_streaming_anthropic.py  test_streaming_openai.py  test_streaming_telegram.py
tests/memory/: test_injection_in_memory.py  test_store.py
tests/multimodal/: test_document.py  test_image.py  test_registry.py  test_voice.py
tests/observability/: test_metrics.py  test_metrics_coverage.py  test_tracing.py
tests/policy/: test_confirmations.py  test_confirmations_coverage.py  test_engine.py  test_engine_coverage.py  test_engine_final.py  test_engine_more.py  test_engine_with_guard.py  test_group_moderation.py  (+6 more)
(+48 files in other folders)
