[project]
name = "mohizarbot"
version = "0.1.0"
description = "Public Telegram bot with multi-provider LLM and prompt-injection-resistant architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5",
    "structlog>=24.4",
    "httpx>=0.27",
    "pypdf>=5.3",
    "python-docx>=1.2",
    "chardet>=5.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]

[tool.ruff.lint.isort]
known-first-party = ["mohizarbot"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "B017"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
